@@ -9,7 +9,9 @@
 package org.sosy_lab.java_smt.solvers.cvc5;
 
 import static com.google.common.base.Preconditions.checkArgument;
+import static com.google.common.base.Preconditions.checkNotNull;
 import static com.google.common.base.Preconditions.checkState;
+import static org.sosy_lab.java_smt.api.FormulaType.getFloatingPointTypeFromSizesWithHiddenBit;
 
 import com.google.common.base.Preconditions;
 import com.google.common.base.Splitter;
@@ -32,10 +34,14 @@ import io.github.cvc5.Sort;
 import io.github.cvc5.Term;
 import io.github.cvc5.TermManager;
 import java.math.BigInteger;
+import java.util.ArrayDeque;
 import java.util.ArrayList;
+import java.util.Deque;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.sosy_lab.common.rationals.Rational;
 import org.sosy_lab.java_smt.api.ArrayFormula;
@@ -50,13 +56,16 @@ import org.sosy_lab.java_smt.api.Formula;
 import org.sosy_lab.java_smt.api.FormulaType;
 import org.sosy_lab.java_smt.api.FormulaType.ArrayFormulaType;
 import org.sosy_lab.java_smt.api.FormulaType.FloatingPointType;
+import org.sosy_lab.java_smt.api.FunctionDeclaration;
 import org.sosy_lab.java_smt.api.FunctionDeclarationKind;
 import org.sosy_lab.java_smt.api.QuantifiedFormulaManager.Quantifier;
 import org.sosy_lab.java_smt.api.RegexFormula;
 import org.sosy_lab.java_smt.api.StringFormula;
 import org.sosy_lab.java_smt.api.visitors.FormulaVisitor;
+import org.sosy_lab.java_smt.api.visitors.TraversalProcess;
 import org.sosy_lab.java_smt.basicimpl.FormulaCreator;
 import org.sosy_lab.java_smt.basicimpl.FunctionDeclarationImpl;
+import org.sosy_lab.java_smt.basicimpl.SMTLibTokenizer;
 import org.sosy_lab.java_smt.solvers.cvc5.CVC5Formula.CVC5ArrayFormula;
 import org.sosy_lab.java_smt.solvers.cvc5.CVC5Formula.CVC5BitvectorFormula;
 import org.sosy_lab.java_smt.solvers.cvc5.CVC5Formula.CVC5BooleanFormula;
@@ -68,7 +77,7 @@ import org.sosy_lab.java_smt.solvers.cvc5.CVC5Formula.CVC5RationalFormula;
 import org.sosy_lab.java_smt.solvers.cvc5.CVC5Formula.CVC5RegexFormula;
 import org.sosy_lab.java_smt.solvers.cvc5.CVC5Formula.CVC5StringFormula;
 
-public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, Term> {
+class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, Term> {
 
   /** CVC5 does not allow using some key-functions from SMTLIB2 as identifiers. */
   private static final ImmutableSet<String> UNSUPPORTED_IDENTIFIERS = ImmutableSet.of("let");
@@ -78,8 +87,9 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
 
   // <Name, Sort.toString, Term> because CVC5 returns distinct pointers for types, while the
   // String representation is equal (and they are equal)
-  private final Table<String, String, Term> variablesCache = HashBasedTable.create();
-  private final Map<String, Term> functionsCache = new HashMap<>();
+  protected final Table<String, String, Term> variablesCache = HashBasedTable.create();
+  protected final Map<String, Term> functionsCache = new HashMap<>();
+
   private final TermManager termManager;
   private final Solver solver;
 
@@ -105,7 +115,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
     if (existingVar != null) {
       return existingVar;
     }
-    Preconditions.checkArgument(
+    checkArgument(
         !variablesCache.containsRow(name),
         "Symbol %s requested with type %s, but already used with type %s",
         name,
@@ -143,15 +153,16 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
   @Override
   public Sort getFloatingPointType(FloatingPointType pType) {
     try {
-      // plus sign bit
-      return termManager.mkFloatingPointSort(pType.getExponentSize(), pType.getMantissaSize() + 1);
+      // plus hidden bit
+      return termManager.mkFloatingPointSort(
+          pType.getExponentSize(), pType.getMantissaSizeWithHiddenBit());
     } catch (CVC5ApiException e) {
       throw new IllegalArgumentException(
           "Cannot create floatingpoint sort with exponent size "
               + pType.getExponentSize()
               + " and mantissa "
-              + pType.getMantissaSize()
-              + " (plus sign bit).",
+              + pType.getMantissaSizeWithHiddenBit()
+              + " (including hidden bit).",
           e);
     }
   }
@@ -224,9 +235,9 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
     } else if (sort.isBitVector()) {
       return FormulaType.getBitvectorTypeWithSize(sort.getBitVectorSize());
     } else if (sort.isFloatingPoint()) {
-      // CVC5 wants the sign bit as part of the mantissa. We add that manually in creation.
-      return FormulaType.getFloatingPointType(
-          sort.getFloatingPointExponentSize(), sort.getFloatingPointSignificandSize() - 1);
+      // CVC5 wants the hidden bit as part of the mantissa. We add that manually in creation.
+      return getFloatingPointTypeFromSizesWithHiddenBit(
+          sort.getFloatingPointExponentSize(), sort.getFloatingPointSignificandSize());
     } else if (sort.isRoundingMode()) {
       return FormulaType.FloatingPointRoundingModeType;
     } else if (sort.isReal()) {
@@ -251,7 +262,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
     } else {
       try {
         throw new AssertionError(
-            String.format("Encountered unhandled Type '%s' %s.", sort, sort.getKind()));
+            "Encountered unhandled Type '%s' %s.".formatted(sort, sort.getKind()));
       } catch (CVC5ApiException exception) {
         throw new AssertionError("Unexpected error when accessing sort.", exception);
       }
@@ -264,8 +275,8 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
     assert pType.equals(getFormulaType(pTerm))
             || (pType.equals(FormulaType.RationalType)
                 && getFormulaType(pTerm).equals(FormulaType.IntegerType))
-        : String.format(
-            "Cannot encapsulate formula %s of Type %s as %s", pTerm, getFormulaType(pTerm), pType);
+        : "Cannot encapsulate formula %s of Type %s as %s"
+            .formatted(pTerm, getFormulaType(pTerm), pType);
     if (pType.isBooleanType()) {
       return (T) new CVC5BooleanFormula(pTerm);
     } else if (pType.isIntegerType()) {
@@ -298,31 +309,29 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
   @Override
   public BooleanFormula encapsulateBoolean(Term pTerm) {
     assert getFormulaType(pTerm).isBooleanType()
-        : String.format(
-            "%s is not boolean, but %s (%s)", pTerm, pTerm.getSort(), getFormulaType(pTerm));
+        : "%s is not boolean, but %s (%s)".formatted(pTerm, pTerm.getSort(), getFormulaType(pTerm));
     return new CVC5BooleanFormula(pTerm);
   }
 
   @Override
   public BitvectorFormula encapsulateBitvector(Term pTerm) {
     assert getFormulaType(pTerm).isBitvectorType()
-        : String.format("%s is no BV, but %s (%s)", pTerm, pTerm.getSort(), getFormulaType(pTerm));
+        : "%s is no BV, but %s (%s)".formatted(pTerm, pTerm.getSort(), getFormulaType(pTerm));
     return new CVC5BitvectorFormula(pTerm);
   }
 
   @Override
   protected FloatingPointFormula encapsulateFloatingPoint(Term pTerm) {
     assert getFormulaType(pTerm).isFloatingPointType()
-        : String.format("%s is no FP, but %s (%s)", pTerm, pTerm.getSort(), getFormulaType(pTerm));
+        : "%s is no FP, but %s (%s)".formatted(pTerm, pTerm.getSort(), getFormulaType(pTerm));
     return new CVC5FloatingPointFormula(pTerm);
   }
 
   @Override
   protected FloatingPointRoundingModeFormula encapsulateRoundingMode(Term pTerm) {
     assert getFormulaType(pTerm).isFloatingPointRoundingModeType()
-        : String.format(
-            "%s is no FP rounding mode, but %s (%s)",
-            pTerm, pTerm.getSort(), getFormulaType(pTerm));
+        : "%s is no FP rounding mode, but %s (%s)"
+            .formatted(pTerm, pTerm.getSort(), getFormulaType(pTerm));
     return new CVC5FloatingPointRoundingModeFormula(pTerm);
   }
 
@@ -331,16 +340,14 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
   protected <TI extends Formula, TE extends Formula> ArrayFormula<TI, TE> encapsulateArray(
       Term pTerm, FormulaType<TI> pIndexType, FormulaType<TE> pElementType) {
     assert getFormulaType(pTerm).equals(FormulaType.getArrayType(pIndexType, pElementType))
-        : String.format(
-            "%s is no array, but %s (%s)", pTerm, pTerm.getSort(), getFormulaType(pTerm));
+        : "%s is no array, but %s (%s)".formatted(pTerm, pTerm.getSort(), getFormulaType(pTerm));
     return new CVC5ArrayFormula<>(pTerm, pIndexType, pElementType);
   }
 
   @Override
   protected StringFormula encapsulateString(Term pTerm) {
     assert getFormulaType(pTerm).isStringType()
-        : String.format(
-            "%s is no String, but %s (%s)", pTerm, pTerm.getSort(), getFormulaType(pTerm));
+        : "%s is no String, but %s (%s)".formatted(pTerm, pTerm.getSort(), getFormulaType(pTerm));
     return new CVC5StringFormula(pTerm);
   }
 
@@ -373,10 +380,10 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
       // Functions are packaged like this: (functionName arg1 arg2 ...)
       // But can use |(name)| to enable () inside of the variable name
       // TODO what happens for function names containing whitespace?
-      String dequoted = dequote(repr);
+      String dequoted = SMTLibTokenizer.dequoteSMTLib(repr);
       return Iterables.get(Splitter.on(' ').split(dequoted.substring(1)), 0);
     } else {
-      return dequote(repr);
+      return SMTLibTokenizer.dequoteSMTLib(repr);
     }
   }
 
@@ -428,7 +435,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
         // BOUND vars are used for all vars that are bound to a quantifier in CVC5.
         // We resubstitute them back to the original free.
         // CVC5 doesn't give you the de-brujin index
-        Term originalVar = accessVariablesCache(formula.toString(), sort);
+        Term originalVar = getFreeVariableFromCache(formula.toString(), sort, visitor);
         return visitor.visitBoundVariable(encapsulate(originalVar), 0);
 
       } else if (f.getKind() == Kind.FORALL || f.getKind() == Kind.EXISTS) {
@@ -438,7 +445,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
         List<Formula> freeVars = new ArrayList<>();
         for (Term boundVar : f.getChild(0)) { // unpack grand-children of f.
           String name = getName(boundVar);
-          Term freeVar = Preconditions.checkNotNull(accessVariablesCache(name, boundVar.getSort()));
+          Term freeVar = getFreeVariableFromCache(name, boundVar.getSort(), visitor);
           body = body.substitute(boundVar, freeVar);
           freeVars.add(encapsulate(freeVar));
         }
@@ -447,10 +454,10 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
         return visitor.visitQuantifier((BooleanFormula) formula, quant, freeVars, fBody);
 
       } else if (f.getKind() == Kind.CONSTANT) {
-        return visitor.visitFreeVariable(formula, dequote(f.toString()));
+        return visitor.visitFreeVariable(formula, SMTLibTokenizer.dequoteSMTLib(f.toString()));
 
       } else if (f.getKind() == Kind.APPLY_CONSTRUCTOR) {
-        Preconditions.checkState(
+        checkState(
             f.getNumChildren() == 1, "Unexpected formula '%s' with sort '%s'", f, f.getSort());
         return visitor.visitConstant(formula, f.getChild(0).getSymbol());
 
@@ -544,6 +551,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
           .put(Kind.XOR, FunctionDeclarationKind.XOR)
           .put(Kind.ITE, FunctionDeclarationKind.ITE)
           .put(Kind.APPLY_UF, FunctionDeclarationKind.UF)
+          .put(Kind.NEG, FunctionDeclarationKind.UMINUS)
           .put(Kind.ADD, FunctionDeclarationKind.ADD)
           .put(Kind.MULT, FunctionDeclarationKind.MUL)
           .put(Kind.SUB, FunctionDeclarationKind.SUB)
@@ -638,6 +646,7 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
           .put(Kind.STRING_FROM_CODE, FunctionDeclarationKind.STR_FROM_CODE)
           .put(Kind.STRING_LT, FunctionDeclarationKind.STR_LT)
           .put(Kind.STRING_LEQ, FunctionDeclarationKind.STR_LE)
+          .put(Kind.REGEXP_NONE, FunctionDeclarationKind.RE_NONE)
           .put(Kind.REGEXP_PLUS, FunctionDeclarationKind.RE_PLUS)
           .put(Kind.REGEXP_STAR, FunctionDeclarationKind.RE_STAR)
           .put(Kind.REGEXP_OPT, FunctionDeclarationKind.RE_OPTIONAL)
@@ -650,6 +659,12 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
           .put(Kind.SELECT, FunctionDeclarationKind.SELECT)
           .put(Kind.STORE, FunctionDeclarationKind.STORE)
           .put(Kind.CONST_ARRAY, FunctionDeclarationKind.CONST)
+          // Separation logic
+          .put(Kind.SEP_EMP, FunctionDeclarationKind.SEP_EMP)
+          .put(Kind.SEP_NIL, FunctionDeclarationKind.SEP_NIL)
+          .put(Kind.SEP_PTO, FunctionDeclarationKind.SEP_PTO)
+          .put(Kind.SEP_STAR, FunctionDeclarationKind.SEP_STAR)
+          .put(Kind.SEP_WAND, FunctionDeclarationKind.SEP_WAND)
           .build();
 
   private FunctionDeclarationKind getDeclarationKind(Term f) {
@@ -765,39 +780,36 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
 
   @Override
   public Term declareUFImpl(String pName, Sort pReturnType, List<Sort> pArgTypes) {
+    if (pArgTypes.isEmpty()) {
+      // Ufs in CVC5 can't have 0 arity. We just use a variable as a workaround.
+      return makeVariable(pReturnType, pName);
+    }
     checkSymbol(pName);
 
     Term exp = functionsCache.get(pName);
 
     if (exp == null) {
-      // Ufs in CVC5 can't have 0 arity. We just use a variable as a workaround.
-      Sort sort =
-          pArgTypes.isEmpty()
-              ? pReturnType
-              : termManager.mkFunctionSort(pArgTypes.toArray(new Sort[0]), pReturnType);
+      Sort sort = termManager.mkFunctionSort(pArgTypes.toArray(new Sort[0]), pReturnType);
       exp = termManager.mkConst(sort, pName);
       functionsCache.put(pName, exp);
 
     } else {
+      var cachedDomain = exp.getSort().getFunctionDomainSorts();
+      var cachedRange = exp.getSort().getFunctionCodomainSort();
       Preconditions.checkArgument(
-          exp.getSort().equals(exp.getSort()),
-          "Symbol %s already in use for different return type %s",
-          exp,
-          exp.getSort());
-      for (int i = 1; i < exp.getNumChildren(); i++) {
-        // CVC5s first argument in a function/Uf is the declaration, we don't need that here
-        try {
-          Preconditions.checkArgument(
-              pArgTypes.get(i).equals(exp.getChild(i).getSort()),
-              "Argument %s with type %s does not match expected type %s",
-              i - 1,
-              pArgTypes.get(i),
-              exp.getChild(i).getSort());
-        } catch (CVC5ApiException e) {
-          throw new IllegalArgumentException(
-              "Failure visiting the Term '" + exp + "' at index " + i + ".", e);
-        }
+          pArgTypes.size() == cachedDomain.length,
+          "Function %s already defined with a different number of arguments",
+          pName);
+      for (int i = 0; i < cachedDomain.length; i++) {
+        checkArgument(
+            cachedDomain[i].equals(pArgTypes.get(i)),
+            "Function %s already defined with different types",
+            pName);
       }
+      Preconditions.checkArgument(
+          pReturnType.equals(cachedRange),
+          "Function %s already defined with different types",
+          pName);
     }
     return exp;
   }
@@ -845,9 +857,8 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
       }
     } catch (CVC5ApiException e) {
       throw new IllegalArgumentException(
-          String.format(
-              "Failure trying to convert constant %s with type %s to type %s.",
-              value, valueType, type),
+          "Failure trying to convert constant %s with type %s to type %s."
+              .formatted(value, valueType, type),
           e);
     }
   }
@@ -855,46 +866,131 @@ public class CVC5FormulaCreator extends FormulaCreator<Term, Sort, TermManager, 
   private FloatingPointNumber convertFloatingPoint(Term value) throws CVC5ApiException {
     final var fpValue = value.getFloatingPointValue();
     final var expWidth = Ints.checkedCast(fpValue.first);
-    final var mantWidth = Ints.checkedCast(fpValue.second - 1); // without sign bit
+    final var mantWidth = Ints.checkedCast(fpValue.second); // with hidden bit
     final var bvValue = fpValue.third;
-    Preconditions.checkState(bvValue.isBitVectorValue());
+    checkState(bvValue.isBitVectorValue());
     final var bits = bvValue.getBitVectorValue();
-    return FloatingPointNumber.of(bits, expWidth, mantWidth);
+    return FloatingPointNumber.of(
+        bits, getFloatingPointTypeFromSizesWithHiddenBit(expWidth, mantWidth));
   }
 
   @Override
   public FloatingPointRoundingMode getRoundingMode(Term pTerm) {
     checkArgument(pTerm.isRoundingModeValue(), "Term '%s' is not a rounding mode.", pTerm);
     try {
-      switch (pTerm.getRoundingModeValue()) {
-        case ROUND_NEAREST_TIES_TO_AWAY:
-          return FloatingPointRoundingMode.NEAREST_TIES_AWAY;
-        case ROUND_NEAREST_TIES_TO_EVEN:
-          return FloatingPointRoundingMode.NEAREST_TIES_TO_EVEN;
-        case ROUND_TOWARD_NEGATIVE:
-          return FloatingPointRoundingMode.TOWARD_NEGATIVE;
-        case ROUND_TOWARD_POSITIVE:
-          return FloatingPointRoundingMode.TOWARD_POSITIVE;
-        case ROUND_TOWARD_ZERO:
-          return FloatingPointRoundingMode.TOWARD_ZERO;
-        default:
-          throw new IllegalArgumentException(
-              String.format("Unknown rounding mode in Term '%s'.", pTerm));
-      }
+      return switch (pTerm.getRoundingModeValue()) {
+        case ROUND_NEAREST_TIES_TO_AWAY -> FloatingPointRoundingMode.NEAREST_TIES_AWAY;
+        case ROUND_NEAREST_TIES_TO_EVEN -> FloatingPointRoundingMode.NEAREST_TIES_TO_EVEN;
+        case ROUND_TOWARD_NEGATIVE -> FloatingPointRoundingMode.TOWARD_NEGATIVE;
+        case ROUND_TOWARD_POSITIVE -> FloatingPointRoundingMode.TOWARD_POSITIVE;
+        case ROUND_TOWARD_ZERO -> FloatingPointRoundingMode.TOWARD_ZERO;
+      };
     } catch (CVC5ApiException e) {
       throw new IllegalArgumentException(
-          String.format("Failure trying to get the rounding mode of Term '%s'.", pTerm), e);
+          "Failure trying to get the rounding mode of Term '%s'.".formatted(pTerm), e);
     }
   }
 
-  private Term accessVariablesCache(String name, Sort sort) {
+  /**
+   * Returns the free variable for the given name and sort of a bound variable from the variables
+   * cache. Will throw a {@link NullPointerException} if no variable is known for the input!
+   */
+  private Term getFreeVariableFromCache(String name, Sort sort, FormulaVisitor<?> visitor) {
+    if (visitor instanceof BoundVariablesRegisteringRecursiveVisitor registeringVisitor) {
+      registeringVisitor.registerBoundVariable(name, sort);
+    }
     Term existingVar = variablesCache.get(name, sort.toString());
-    Preconditions.checkNotNull(
+    return checkNotNull(
         existingVar,
-        "Symbol %s requested with type %s, but already used with type %s",
+        "Symbol %s requested with type %s, but %s",
         name,
         sort,
-        variablesCache.row(name).keySet());
-    return existingVar;
+        variablesCache.containsRow(name)
+            ? "the used symbol is already registered with type " + variablesCache.row(name).keySet()
+            : "the used symbol is unknown to the variables cache");
+  }
+
+  /**
+   * Caches all bound variables nested in the boolean input term that are unknown to the variable
+   * cache with a free variable copy in it.
+   */
+  protected void registerBoundVariablesWithVisitor(Term input) {
+    checkArgument(
+        input.getSort().isBoolean(),
+        "Only boolean terms can be used to register " + "bound variables as free variables!");
+
+    BoundVariablesRegisteringRecursiveVisitor boundVariablesRegisteringRecursiveVisitor =
+        new BoundVariablesRegisteringRecursiveVisitor(this);
+
+    boundVariablesRegisteringRecursiveVisitor.addToQueue(encapsulateBoolean(input));
+    while (!boundVariablesRegisteringRecursiveVisitor.isQueueEmpty()) {
+      Formula tt = boundVariablesRegisteringRecursiveVisitor.pop();
+      TraversalProcess process = visit(tt, boundVariablesRegisteringRecursiveVisitor);
+      if (process == TraversalProcess.ABORT) {
+        return;
+      }
+    }
+  }
+
+  private static final class BoundVariablesRegisteringRecursiveVisitor
+      implements FormulaVisitor<TraversalProcess> {
+
+    private final Set<Formula> seen = new HashSet<>();
+    private final Deque<Formula> toVisit = new ArrayDeque<>();
+
+    private final CVC5FormulaCreator usedCreator;
+
+    BoundVariablesRegisteringRecursiveVisitor(CVC5FormulaCreator pCreator) {
+      usedCreator = checkNotNull(pCreator);
+    }
+
+    private void registerBoundVariable(String boundVariableName, Sort boundVarSort) {
+      String boundSort = boundVarSort.toString();
+      Term existingVar = usedCreator.variablesCache.get(boundVariableName, boundSort);
+      if (existingVar == null) {
+        existingVar = usedCreator.makeVariable(boundVarSort, boundVariableName);
+        usedCreator.variablesCache.put(boundVariableName, boundSort, existingVar);
+      }
+    }
+
+    void addToQueue(Formula f) {
+      if (seen.add(f)) {
+        toVisit.push(f);
+      }
+    }
+
+    boolean isQueueEmpty() {
+      return toVisit.isEmpty();
+    }
+
+    Formula pop() {
+      return toVisit.pop();
+    }
+
+    @Override
+    public TraversalProcess visitFreeVariable(Formula pF, String pName) {
+      return TraversalProcess.CONTINUE;
+    }
+
+    @Override
+    public TraversalProcess visitConstant(Formula pF, Object pValue) {
+      return TraversalProcess.CONTINUE;
+    }
+
+    @Override
+    public TraversalProcess visitFunction(
+        Formula pF, List<Formula> pArgs, FunctionDeclaration<?> pFunctionDeclaration) {
+      for (Formula f : pArgs) {
+        addToQueue(f);
+      }
+      return TraversalProcess.CONTINUE;
+    }
+
+    @Override
+    public TraversalProcess visitQuantifier(
+        BooleanFormula pF, Quantifier pQuantifier, List<Formula> boundVars, BooleanFormula pBody) {
+      addToQueue(pBody);
+      return TraversalProcess.CONTINUE;
+    }
   }
 }
