@@ -24,8 +24,8 @@ import ap.parser.IFunApp;
 import ap.parser.IFunction;
 import ap.parser.IIntFormula;
 import ap.parser.IIntLit;
-import ap.parser.IIntRelation;
 import ap.parser.ITerm;
+import ap.parser.Parser2InputAbsy.ParseException;
 import ap.parser.Parser2InputAbsy.TranslationException;
 import ap.parser.PartialEvaluator;
 import ap.parser.SMTLineariser;
@@ -33,6 +33,7 @@ import ap.parser.SMTParser2InputAbsy.SMTFunctionType;
 import ap.parser.SMTTypes.SMTType;
 import ap.terfor.ConstantTerm;
 import ap.terfor.preds.Predicate;
+import ap.theories.ADT.ADTProxySort;
 import ap.theories.arrays.ExtArray.ArraySort;
 import ap.theories.bitvectors.ModuloArithmetic;
 import ap.theories.rationals.Rationals$;
@@ -43,6 +44,7 @@ import ap.types.Sort.MultipleValueBool$;
 import ap.util.Debug;
 import com.google.common.base.Joiner;
 import com.google.common.base.Preconditions;
+import com.google.common.base.Verify;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Lists;
@@ -65,7 +67,6 @@ import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.Set;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.sosy_lab.common.Appender;
 import org.sosy_lab.common.Appenders;
@@ -78,6 +79,7 @@ import org.sosy_lab.common.configuration.Options;
 import org.sosy_lab.common.io.PathCounterTemplate;
 import org.sosy_lab.java_smt.api.FormulaType;
 import org.sosy_lab.java_smt.api.SolverContext.ProverOptions;
+import org.sosy_lab.java_smt.solvers.princess.PrincessFunctionDeclaration.PrincessIFunctionDeclaration;
 import ostrich.OFlags;
 import ostrich.OstrichStringTheory;
 import scala.Tuple2;
@@ -171,7 +173,7 @@ class PrincessEnvironment {
 
   private final Map<String, ITerm> sortedVariablesCache = new HashMap<>();
 
-  private final Map<String, IFunction> functionsCache = new HashMap<>();
+  private final Map<String, PrincessIFunctionDeclaration> functionsCache = new HashMap<>();
 
   private final Map<FormulaType<?>, Map<ITerm, ITerm>> constArrayCache = new HashMap<>();
 
@@ -220,7 +222,7 @@ class PrincessEnvironment {
     // add all symbols, that are available until now
     boolVariablesCache.values().forEach(newApi::addBooleanVariable);
     sortedVariablesCache.values().forEach(newApi::addConstant);
-    functionsCache.values().forEach(newApi::addFunction);
+    functionsCache.values().forEach(p -> newApi.addFunction(p.getFunction()));
 
     PrincessAbstractProver<?> prover;
     if (useForInterpolation) {
@@ -304,8 +306,7 @@ class PrincessEnvironment {
     Preconditions.checkState(registeredProvers.isEmpty());
   }
 
-  public List<? extends IExpression> parseStringToTerms(String s, PrincessFormulaCreator creator) {
-
+  public List<? extends IExpression> parseStringToTerms(String s) {
     Tuple4<
             Seq<IFormula>,
             scala.collection.immutable.Map<IFunction, SMTFunctionType>,
@@ -315,39 +316,28 @@ class PrincessEnvironment {
 
     try {
       parserResult = extractFromSTMLIB(s);
-    } catch (TranslationException | EnvironmentException nested) {
+    } catch (TranslationException | EnvironmentException | ParseException nested) {
       throw new IllegalArgumentException(nested);
     }
 
-    final List<IFormula> formulas = asJava(parserResult._1());
+    List<IFormula> asserts = asJava(parserResult._1());
+    Map<IFunction, SMTFunctionType> ufs = asJava(parserResult._2());
+    Map<ConstantTerm, SMTType> constants = asJava(parserResult._3());
+    Map<Predicate, SMTFunctionType> nullaryPredicates = asJava(parserResult._4());
 
-    ImmutableSet.Builder<IExpression> declaredFunctions = ImmutableSet.builder();
-    for (IExpression f : formulas) {
-      declaredFunctions.addAll(creator.extractVariablesAndUFs(f, true).values());
+    for (Entry<IFunction, SMTFunctionType> entry : ufs.entrySet()) {
+      functionsCache.put(
+          entry.getKey().name(),
+          new PrincessIFunctionDeclaration(entry.getKey(), entry.getValue()));
     }
-    for (IExpression var : declaredFunctions.build()) {
-      if (var instanceof IConstant) {
-        sortedVariablesCache.put(((IConstant) var).c().name(), (ITerm) var);
-        addSymbol((IConstant) var);
-      } else if (var instanceof IAtom) {
-        boolVariablesCache.put(((IAtom) var).pred().name(), (IFormula) var);
-        addSymbol((IAtom) var);
-      } else if (var instanceof IFunApp) {
-        IFunction fun = ((IFunApp) var).fun();
-        functionsCache.put(fun.name(), fun);
-        addFunction(fun);
-      } else if (var instanceof IIntFormula
-          && ((IIntFormula) var).rel().equals(IIntRelation.EqZero())
-          && ((IIntFormula) var).apply(0) instanceof IFunApp) {
-        // Functions with return type Bool are wrapped in a predicate as (=0 (uf ...))
-        IFunction fun = ((IFunApp) var.apply(0)).fun();
-        functionsCache.put(fun.name(), fun);
-        addFunction(fun);
-      } else {
-        throw new IllegalArgumentException();
-      }
+    for (ConstantTerm constant : constants.keySet()) {
+      sortedVariablesCache.put(constant.name(), new IConstant(constant));
     }
-    return formulas;
+    for (Predicate predicate : nullaryPredicates.keySet()) {
+      Verify.verify(predicate.arity() == 0);
+      boolVariablesCache.put(predicate.name(), new IAtom(predicate, toSeq(ImmutableList.of())));
+    }
+    return asserts;
   }
 
   /**
@@ -356,6 +346,7 @@ class PrincessEnvironment {
    *
    * @throws EnvironmentException from Princess when the parsing fails
    * @throws TranslationException from Princess when the parsing fails due to type mismatch
+   * @throws ParseException from Princess when the parsing fails due to syntax errors
    */
   /* EnvironmentException is not unused, but the Java compiler does not like Scala. */
   @SuppressWarnings("unused")
@@ -364,7 +355,8 @@ class PrincessEnvironment {
           scala.collection.immutable.Map<IFunction, SMTFunctionType>,
           scala.collection.immutable.Map<ConstantTerm, SMTType>,
           scala.collection.immutable.Map<Predicate, SMTFunctionType>>
-      extractFromSTMLIB(String s) throws EnvironmentException, TranslationException {
+      extractFromSTMLIB(String s)
+          throws EnvironmentException, TranslationException, ParseException {
     // replace let-terms and function definitions by their full term.
     final boolean fullyInlineLetsAndFunctions = true;
     return api.extractSMTLIBAssertionsSymbols(new StringReader(s), fullyInlineLetsAndFunctions);
@@ -435,10 +427,10 @@ class PrincessEnvironment {
         // declare normal symbols
         for (Entry<String, IExpression> symbol : symbols.entrySet()) {
           out.append(
-              String.format(
-                  "(declare-fun %s () %s)%n",
-                  SMTLineariser.quoteIdentifier(symbol.getKey()),
-                  getFormulaType(symbol.getValue()).toSMTLIBString()));
+              "(declare-fun %s () %s)%n"
+                  .formatted(
+                      SMTLineariser.quoteIdentifier(symbol.getKey()),
+                      getFormulaType(symbol.getValue()).toSMTLIBString()));
         }
 
         // declare UFs
@@ -447,11 +439,11 @@ class PrincessEnvironment {
               Lists.transform(
                   asJava(function.getValue().args()), a -> getFormulaType(a).toSMTLIBString());
           out.append(
-              String.format(
-                  "(declare-fun %s (%s) %s)%n",
-                  SMTLineariser.quoteIdentifier(function.getKey()),
-                  Joiner.on(" ").join(argSorts),
-                  getFormulaType(function.getValue()).toSMTLIBString()));
+              "(declare-fun %s (%s) %s)%n"
+                  .formatted(
+                      SMTLineariser.quoteIdentifier(function.getKey()),
+                      Joiner.on(" ").join(argSorts),
+                      getFormulaType(function.getValue()).toSMTLIBString()));
         }
 
         // now every symbol from the formula or from abbreviations are declared,
@@ -460,11 +452,11 @@ class PrincessEnvironment {
           IExpression abbrevFormula = usedAbbrevs.get(abbrev);
           IExpression fullFormula = abbrevMap.get(abbrevFormula);
           out.append(
-              String.format(
-                  "(define-fun %s () %s %s)%n",
-                  SMTLineariser.quoteIdentifier(abbrev),
-                  getFormulaType(fullFormula).toSMTLIBString(),
-                  SMTLineariser.asString(fullFormula)));
+              "(define-fun %s () %s %s)%n"
+                  .formatted(
+                      SMTLineariser.quoteIdentifier(abbrev),
+                      getFormulaType(fullFormula).toSMTLIBString(),
+                      SMTLineariser.asString(fullFormula)));
         }
 
         // now add the final assert
@@ -503,9 +495,9 @@ class PrincessEnvironment {
             Set<IExpression> varsFromAbbrev = getVariablesFromAbbreviation(var);
             Sets.difference(varsFromAbbrev, allVars).forEach(waitlistSymbols::push);
             allVars.addAll(varsFromAbbrev);
-          } else if (var instanceof IFunApp) {
+          } else if (var instanceof IFunApp iFunApp) {
             Preconditions.checkState(!ufs.containsKey(name));
-            ufs.put(name, (IFunApp) var);
+            ufs.put(name, iFunApp);
           } else {
             Preconditions.checkState(!symbols.containsKey(name));
             symbols.put(name, var);
@@ -556,15 +548,15 @@ class PrincessEnvironment {
   }
 
   private static String getName(IExpression var) {
-    if (var instanceof IAtom) {
-      return ((IAtom) var).pred().name();
+    if (var instanceof IAtom iAtom) {
+      return iAtom.pred().name();
     } else if (var instanceof IConstant) {
       return var.toString();
-    } else if (var instanceof IFunApp) {
-      String fullStr = ((IFunApp) var).fun().toString();
+    } else if (var instanceof IFunApp iFunApp) {
+      String fullStr = iFunApp.fun().toString();
       return fullStr.substring(0, fullStr.indexOf('/'));
-    } else if (var instanceof IIntFormula) {
-      return getName(((IIntFormula) var).t());
+    } else if (var instanceof IIntFormula iIntFormula) {
+      return getName(iIntFormula.t());
     }
 
     throw new IllegalArgumentException("The given parameter is no variable or function");
@@ -573,14 +565,12 @@ class PrincessEnvironment {
   static FormulaType<?> getFormulaType(IExpression pFormula) {
     if (pFormula instanceof IFormula) {
       return FormulaType.BooleanType;
-    } else if (pFormula instanceof IFunApp
-        && ((IFunApp) pFormula).fun().equals(ModuloArithmetic.bv_extract())) {
+    } else if (pFormula instanceof IFunApp app && app.fun().equals(ModuloArithmetic.bv_extract())) {
       IIntLit upper = (IIntLit) pFormula.apply(0);
       IIntLit lower = (IIntLit) pFormula.apply(1);
       IdealInt bwResult = upper.value().$minus(lower.value()).$plus(IdealInt.ONE());
       return FormulaType.getBitvectorTypeWithSize(bwResult.intValue());
-    } else if (pFormula instanceof IFunApp
-        && ((IFunApp) pFormula).fun().equals(ModuloArithmetic.bv_concat())) {
+    } else if (pFormula instanceof IFunApp app && app.fun().equals(ModuloArithmetic.bv_concat())) {
       IIntLit upper = (IIntLit) pFormula.apply(0);
       IIntLit lower = (IIntLit) pFormula.apply(1);
       IdealInt bwResult = upper.value().$plus(lower.value());
@@ -592,28 +582,29 @@ class PrincessEnvironment {
       } catch (IllegalArgumentException e) {
         // add more info about the formula, then rethrow
         throw new IllegalArgumentException(
-            String.format(
-                "Unknown formula type '%s' of sort '%s' for formula '%s'.",
-                pFormula.getClass(), sort.toString(), pFormula),
+            "Unknown formula type '%s' of sort '%s' for formula '%s'."
+                .formatted(pFormula.getClass(), sort.toString(), pFormula),
             e);
       }
     }
   }
 
-  private static FormulaType<?> getFormulaTypeFromSort(final Sort sort) {
+  static FormulaType<?> getFormulaTypeFromSort(final Sort sort) {
     if (sort == PrincessEnvironment.BOOL_SORT) {
       return FormulaType.BooleanType;
     } else if (sort == PrincessEnvironment.INTEGER_SORT || sort == PrincessEnvironment.NAT_SORT) {
       return FormulaType.IntegerType;
     } else if (sort == PrincessEnvironment.FRACTION_SORT) {
       return FormulaType.RationalType;
-    } else if (sort == PrincessEnvironment.STRING_SORT) {
+    } else if (sort == PrincessEnvironment.STRING_SORT
+        || (sort instanceof ADTProxySort && "String".equals(sort.toString())) // string constant
+    ) {
       return FormulaType.StringType;
     } else if (sort == PrincessEnvironment.REGEX_SORT) {
       return FormulaType.RegexType;
-    } else if (sort instanceof ArraySort) {
-      Seq<Sort> indexSorts = ((ArraySort) sort).theory().indexSorts();
-      Sort elementSort = ((ArraySort) sort).theory().objSort();
+    } else if (sort instanceof ArraySort arraySort) {
+      Seq<Sort> indexSorts = arraySort.theory().indexSorts();
+      Sort elementSort = arraySort.theory().objSort();
       assert indexSorts.iterator().size() == 1 : "unexpected index type in Array type:" + sort;
       // assert indexSorts.size() == 1; // TODO Eclipse does not like simpler code.
       return FormulaType.getArrayType(
@@ -629,7 +620,7 @@ class PrincessEnvironment {
       } else {
         // Otherwise, fail
         throw new IllegalArgumentException(
-            String.format("Unknown formula type '%s' for sort '%s'.", sort.getClass(), sort));
+            "Unknown formula type '%s' for sort '%s'.".formatted(sort.getClass(), sort));
       }
     }
   }
@@ -644,6 +635,10 @@ class PrincessEnvironment {
 
   public IExpression makeVariable(Sort type, String varname) {
     if (type == BOOL_SORT) {
+      Preconditions.checkArgument(
+          !sortedVariablesCache.containsKey(varname),
+          "Variable %s already defined with a different type",
+          varname);
       if (boolVariablesCache.containsKey(varname)) {
         return boolVariablesCache.get(varname);
       } else {
@@ -653,15 +648,18 @@ class PrincessEnvironment {
         return var;
       }
     } else {
+      Preconditions.checkArgument(
+          !boolVariablesCache.containsKey(varname),
+          "Variable %s already defined with a different type",
+          varname);
       if (sortedVariablesCache.containsKey(varname)) {
-        ITerm found = sortedVariablesCache.get(varname);
+        var cached = sortedVariablesCache.get(varname);
         Preconditions.checkArgument(
-            getFormulaType(found).equals(getFormulaTypeFromSort(type)),
-            "Can't declare variable \"%s\" with type %s. It has already been declared with type %s",
-            varname,
-            getFormulaTypeFromSort(type),
-            getFormulaType(found));
-        return found;
+            !boolVariablesCache.containsKey(varname)
+                && getFormulaType(cached).equals(getFormulaTypeFromSort(type)),
+            "Variable %s already defined with a different type",
+            varname);
+        return sortedVariablesCache.get(varname);
       } else {
         ITerm var = api.createConstant(varname, type);
         addSymbol(var);
@@ -672,17 +670,29 @@ class PrincessEnvironment {
   }
 
   /** This function declares a new functionSymbol with the given argument types and result. */
-  public IFunction declareFun(String name, Sort returnType, List<Sort> args) {
+  public PrincessFunctionDeclaration declareFun(String name, Sort returnType, List<Sort> args) {
     if (functionsCache.containsKey(name)) {
-      // FIXME Check that the old declaration has the right type
+      var cached = functionsCache.get(name);
+      Preconditions.checkArgument(
+          cached
+                  .getArgSorts()
+                  .equals(Lists.transform(args, PrincessEnvironment::getFormulaTypeFromSort))
+              && cached.getReturnSort().equals(getFormulaTypeFromSort(returnType)),
+          "Function %s already defined with different types",
+          name);
       return functionsCache.get(name);
     } else {
       IFunction funcDecl =
           api.createFunction(
               name, toSeq(args), returnType, false, SimpleAPI.FunctionalityMode$.MODULE$.Full());
       addFunction(funcDecl);
-      functionsCache.put(name, funcDecl);
-      return funcDecl;
+      var uf =
+          new PrincessIFunctionDeclaration(
+              Lists.transform(args, PrincessEnvironment::getFormulaTypeFromSort),
+              getFormulaTypeFromSort(returnType),
+              funcDecl);
+      functionsCache.put(name, uf);
+      return uf;
     }
   }
 
@@ -727,8 +737,7 @@ class PrincessEnvironment {
   }
 
   public boolean hasArrayType(IExpression exp) {
-    if (exp instanceof ITerm) {
-      final ITerm t = (ITerm) exp;
+    if (exp instanceof ITerm t) {
       return Sort$.MODULE$.sortOf(t) instanceof ArraySort;
     } else {
       return false;
@@ -762,8 +771,7 @@ class PrincessEnvironment {
   }
 
   static Seq<ITerm> toITermSeq(List<IExpression> exprs) {
-    return PrincessEnvironment.toSeq(
-        exprs.stream().map(e -> (ITerm) e).collect(Collectors.toList()));
+    return PrincessEnvironment.toSeq(exprs.stream().map(e -> (ITerm) e).toList());
   }
 
   static Seq<ITerm> toITermSeq(IExpression... exprs) {
